feat (responsive): add responsivity and fixes
fix wording
add style for media under 992px so it display cleanly on phones

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,7 +17,7 @@
   },
   "profile": {
     "title": "Who am I ?",
-    "presentation": "# Welcome :D \n\nMy name is Quentin GRISEL, a young React/C# fullstack developer.\n\nComing out from an IT & network oriented school formation, I took another path as developer because this is the thing that gives me most satisfaction. Here is the reason why i started developping at the age of 14 ! It gives me pleasure so why not ? :) \n\nI mainly master /react/ et le /csharp/."
+    "presentation": "# Welcome :D \n\nMy name is Quentin GRISEL, a young React/C# fullstack developer.\n\nComing out from an IT & network oriented school formation, I took another path as developer because this is the thing that gives me most satisfaction. Here is the reason why i started developping at the age of 14 ! It gives me pleasure so why not ? :) \n\nI mainly master /react/ and /csharp/."
   },
   "skills":{
     "timeline":{
