--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,14 +13,19 @@
     "technological-watch":"Technological watch",
     "nodejs": "Node.js",
     "git":"Git",
-    "gitflow":"GitFlow"
+    "gitflow":"GitFlow",
+    "ngrx": "ngrx",
+    "rxjs": "rxjs",
+    "lodash": "lodash",
+    "reactiveProgrammation": "Reactive programmation"
   },
   "profile": {
     "title": "Who am I ?",
-    "presentation": "# Welcome \n\nMy name is Quentin GRISEL, a  /react/ and /csharp/ fullstack developer.\n\nComing out from an IT & network oriented school formation, I took another path as developer because this is the thing that gives me most satisfaction. Here is the reason why i started developping at the age of 14 ! It gives me pleasure so why not ? :)"
+    "presentation": "# Welcome \n\nMy name is Quentin GRISEL, a  /react/, /angular/ and /csharp/ /fullstack/ developer.\n\nComing out from an IT & network oriented school formation, I took another path as developer because this is the thing that gives me most satisfaction. Here is the reason why i started developping at the age of 14 ! It gives me pleasure so why not ? :)"
   },
   "skills":{
     "timeline":{
+      "november2019": "## November 2019 - From scratch creation of a new angular 8 project \n\n*  Discovery and set up of a state management: [ngrx](https://ngrx.io/docs)\n*  Self-learning of angular reactive programmation (ngrx is based on [rxjs](https://rxjs.dev/guide/overview))",
       "august2019":"## August 2019 - Self training on React\n\n*   Hooks (React 16.8)\n*   Context Api (Stable since React 16.3)\n*   Teamwork magic ([Through this article](https://medium.com/simply/state-management-with-react-hooks-and-context-api-at-10-lines-of-code-baf6be8302c))",
       "2019": "## 2019 - FullStack development\n\n*   Angular : Major and minor evolutions, bug fixes\n*   C# : Major and minor evolutions, bug fixes",
       "2018": "## 2018 - FullStack development\n\n*   Angular : First step, minor evolutions, bug fixes\n*   React :\n    *   Creation of a training exercices management plateform (KATA & DOJO)\n    *   Creation of a POC (Proof Of Concept) about React. Purpose : propose React as a viable and functional technology for the client's needs\n    *   Creation of a complete formation project, from environnement to Redux\n*   C# :\n    *   Creation of training exercices management APIs (ONION architecture)\n    *   Major evolutions on differents subjects\n*   Social : Participation in presentations about multiple technical subjects related to development and software architecture\n*   Divers :\n    *   Présentations/Formations (30 minutes format) on various subjects (technological watch, discovering, etc.)\n    *   Technical conceptions writing",
