--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -13,14 +13,19 @@
     "technological-watch":"Veille technologique",
     "nodejs": "Node.js",
     "git":"Git",
-    "gitflow":"GitFlow"
+    "gitflow":"GitFlow",
+    "ngrx": "ngrx",
+    "rxjs": "rxjs",
+    "lodash": "lodash",
+    "reactiveProgrammation": "Programmation réactive"
   },
   "profile": {
     "title": "Qui suis-je ?",
-    "presentation": "#  Bienvenu \n\nMoi c'est Quentin GRISEL, développeur fullstack /react/ et /csharp/.\n\nSorti d'un cursus orienté IT et réseau, je me suis redirigé vers le développement car cette branche est celle qui m'apporte le plus de satisfaction. Si je développe depuis que j'ai 14 ans environ, ce n'est pas pour rien ! J'y prend du plaisir alors pourquoi m'en priver ? :)"
+    "presentation": "#  Bienvenu \n\nMoi c'est Quentin GRISEL, développeur /fullstack/ /react/, /angular/ et /csharp/.\n\nSorti d'un cursus orienté IT et réseau, je me suis redirigé vers le développement car cette branche est celle qui m'apporte le plus de satisfaction. Si je développe depuis que j'ai 14 ans environ, ce n'est pas pour rien ! J'y prend du plaisir alors pourquoi m'en priver ? :)"
   },
   "skills":{
     "timeline":{
+      "november2019": "## Novembre 2019 - Création d'un nouveau projet (from scratch) en angular 8 \n\n*  Mise en place d'un gestionnaire d'état (state management): [ngrx](https://ngrx.io/docs)\n*  Découverte de la programmation réactive en angular (ngrx est basé sur [rxjs](https://rxjs.dev/guide/overview))",
       "august2019":"## Août 2019 - Autoformation sur React\n\n*   Les Hooks (React 16.8)\n*   Le Context Api (Stable depuis React 16.3)\n*   La magie du travail d'équipe ([Via cet article](https://medium.com/simply/state-management-with-react-hooks-and-context-api-at-10-lines-of-code-baf6be8302c))",
       "2019":"## 2019 - Développement fullStack\n\n*   Angular : Développement d'évolutions majeures et mineures, correction de bogues\n*   C# : Développement d'évolutions majeure et mineures, correction de bogues",
       "2018": "## 2018 - Développement fullStack\n\n*   Angular : Prise en main, Développement d'évolutions mineures, correction de bogues\n*   React :\n    *   Développement d'une interface de gestion d'exercices d'entrainement (KATA & DOJO)\n    *   Création d'un POC (Proof Of Concept) concernant React. Objectif : proposer React en tant que technologie viable et focntionnelle pour les besoins du client\n    *   Création d'un projet de formation complète\n*   C# :\n    *   Création des APIs de gestion des exercices d'entrainement (Architecture ONION)\n    *   Développement d'évolutions majeures sur différents sujets\n*   Social : Participation à des présentations sur différents sujets techniques liés au développement et à l'architecture logicielle\n*   Divers :\n    *   Présentations/Formations (format 30 minutes) sur divers sujets (Veille technologique, découverte, etc.)\n    *   Ecriture de conceptions techniques",
