feat (design): update typescript and rework design
update typescript to a new version to prevent eslint annoying errors
update colors and styles. A bit of fresh air isn't bad !

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -21,7 +21,7 @@
   },
   "profile": {
     "title": "Qui suis-je ?",
-    "presentation": "#  Bienvenu \n\nMoi c'est Quentin GRISEL, développeur /fullstack/ /react/, /angular/ et /csharp/.\n\nSorti d'un cursus orienté IT et réseau, je me suis redirigé vers le développement car cette branche est celle qui m'apporte le plus de satisfaction. Si je développe depuis que j'ai 14 ans environ, ce n'est pas pour rien ! J'y prend du plaisir alors pourquoi m'en priver ? :)"
+    "presentation": "#  Bienvenue \n\nMoi c'est Quentin GRISEL, développeur /fullstack/ /react/, /angular/ et /csharp/.\n\nSorti d'un cursus orienté IT et réseau, je me suis redirigé vers le développement car cette branche est celle qui m'apporte le plus de satisfaction. Si je développe depuis que j'ai 14 ans environ, ce n'est pas pour rien ! J'y prend du plaisir alors pourquoi m'en priver ? :)"
   },
   "skills":{
     "timeline":{
