--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,19 +1,19 @@
 {
-  "lang":{
-    "english":"English",
-    "french":"French"
+  "lang": {
+    "english": "English",
+    "french": "French"
   },
-  "tags":{
-    "react":"React",
-    "angular":"Angular",
+  "tags": {
+    "react": "React",
+    "angular": "Angular",
     "csharp": "C#",
-    "fullstack":"FullStack",
-    "architecture":"Architecture",
+    "fullstack": "FullStack",
+    "architecture": "Architecture",
     "formation": "Formation",
-    "technological-watch":"Technological watch",
+    "technological-watch": "Technological watch",
     "nodejs": "Node.js",
-    "git":"Git",
-    "gitflow":"GitFlow",
+    "git": "Git",
+    "gitflow": "GitFlow",
     "ngrx": "ngrx",
     "rxjs": "rxjs",
     "lodash": "lodash",
@@ -21,16 +21,15 @@
   },
   "profile": {
     "title": "Who am I ?",
-    "presentation": "# Welcome \n\nMy name is Quentin GRISEL, a  /react/, /angular/ and /csharp/ /fullstack/ developer.\n\nComing out from an IT & network oriented school formation, I took another path as developer because this is the thing that gives me most satisfaction. Here is the reason why i started developping at the age of 14 ! It gives me pleasure so why not ? :)"
+    "presentation": "# Welcome \n\nMy name is Quentin GRISEL, a  /react/, /angular/ and /csharp/ developer.  \nComing out from an IT & network oriented school formation, I took another path as developer because this is the thing that gives me most satisfaction. You know that micro-satisfaction system that keeps gamers playing years after years ? That's the same !  \n  \nAnd about gaming... I do, mostly MMORPG like Dofus, TESO or Final Fantasy XIV. I play some guitar and can sing as well.  \nOh, you wanted to know more about my skills ? hire me ! :D"
   },
-  "skills":{
-    "timeline":{
+  "skills": {
+    "timeline": {
       "August2021": "## August 2021 - Api implementation in .NET Core 3.1 (Onion architecture)\n*   Creation of Api to read/write object in a no SQL database (CosmosDb)",
       "october2020": "## October 2019 - Evolution/Maintenance/Creation of application in Angular (4, 9), C# and ASP (+JQuery)\n*   Pressing evolutions (For legal reasons) of an application in Angular 4 and C#\n*   Evolution/Maintenance of the previously said application\n*   Evolutions/maintenance of an ASP application\n*   Creation of a front-end application in Angular 9 to replace an old one made with MatLab (Read/write files, graphic display with PlotlyJs)\n*   Implementation of Git good practices (Gitflow)",
       "october2020-1week": "## October 2019 - Graphic help on a responsive React web application\nA non deliverable application was in need of a few pressing graphic updates",
-
       "november2019": "## November 2019 - From scratch creation of a new angular 8 project \n\n*  Discovery and set up of a state management: [ngrx](https://ngrx.io/docs)\n*  Self-learning of angular reactive programmation (ngrx is based on [rxjs](https://rxjs.dev/guide/overview))",
-      "august2019":"## August 2019 - Self training on React\n\n*   Hooks (React 16.8)\n*   Context Api (Stable since React 16.3)\n*   Teamwork magic ([Through this article](https://medium.com/simply/state-management-with-react-hooks-and-context-api-at-10-lines-of-code-baf6be8302c))",
+      "august2019": "## August 2019 - Self training on React\n\n*   Hooks (React 16.8)\n*   Context Api (Stable since React 16.3)\n*   Teamwork magic ([Through this article](https://medium.com/simply/state-management-with-react-hooks-and-context-api-at-10-lines-of-code-baf6be8302c))",
       "2019": "## 2019 - FullStack development\n\n*   Angular : Major and minor evolutions, bug fixes\n*   C# : Major and minor evolutions, bug fixes",
       "2018": "## 2018 - FullStack development\n\n*   Angular : First step, minor evolutions, bug fixes\n*   React :\n    *   Creation of a training exercices management plateform (KATA & DOJO)\n    *   Creation of a POC (Proof Of Concept) about React. Purpose : propose React as a viable and functional technology for the client's needs\n    *   Creation of a complete formation project, from environnement to Redux\n*   C# :\n    *   Creation of training exercices management APIs (ONION architecture)\n    *   Major evolutions on differents subjects\n*   Social : Participation in presentations about multiple technical subjects related to development and software architecture\n*   Divers :\n    *   Présentations/Formations (30 minutes format) on various subjects (technological watch, discovering, etc.)\n    *   Technical conceptions writing",
       "2017": "## 2017 - Full time job at Capgemini\n\n*   C# : Formation and apprenticeship (.NET framework, ASP.NET, Razor)\n*   Learning few Front-End development tools : Node.js, Git (Gitflow)",
@@ -40,7 +39,7 @@
       "2011-2013": "## 2011 - 2013\n\nIT & Network year 1 & 2 bachelor, alternating studies at [La Brosse & Dupont](http://www.lbd.fr/en)"
     }
   },
-  "keywords":{
-    "mastery":"Mastery"
+  "keywords": {
+    "mastery": "Mastery"
   }
 }
